docker app working, db not seeded

--- a/app/app/Dockerfile
+++ b/app/app/Dockerfile
@@ -14,7 +14,8 @@
 #CMD ["npm", "start"]
 
 
-FROM node as app
+
+FROM node AS app
 
 WORKDIR /usr/src/app
 
@@ -28,20 +29,18 @@ EXPOSE 3000
 
 CMD ["node", "app.js"]
 
-
-
-# Production ready image
-
-FROM node:alpine
+FROM node:alpine 
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
-
 RUN npm install -g npm@7.20.6
 
-COPY --from=app /usr/src/app /usr/src/app
+#COPY --from =app /usr/src/app /usr/src app
+
+COPY . .
 
 EXPOSE 3000
+
+CMD [ "node", "seeds/seed.js"]
 
 CMD ["node", "app.js"]
